체력바 구현 완료

--- a/project/Non-touch-defence-sample/Assembly-CSharp.csproj
+++ b/project/Non-touch-defence-sample/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\02. Scripts\ArcherScript.cs" />
+    <Compile Include="Assets\02. Scripts\CameraManager.cs" />
     <Compile Include="Assets\02. Scripts\CharacterAttributeScript.cs" />
     <Compile Include="Assets\02. Scripts\EmenyScript.cs" />
     <Compile Include="Assets\02. Scripts\EnemyMoveScript.cs" />
